collage/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\pelenovski\Desktop\Github\collage\collage\bookClasses;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\pelenovski\Desktop\Github\collage\collage
-d
C:\Users\pelenovski\Desktop\Github\collage\collage\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\pelenovski\Desktop\Github\collage\collage\Picture.java
<---- end of javadoc command ---->
Loading source file C:\Users\pelenovski\Desktop\Github\collage\collage\Picture.java...
Constructing Javadoc information...
C:\Users\pelenovski\Desktop\Github\collage\collage\Picture.java:19: error: cannot access SimplePicture
public class Picture extends SimplePicture
                             ^
  bad source file: C:\Users\pelenovski\Desktop\Github\collage\collage\bookClasses\SimplePicture.java
    file does not contain class SimplePicture
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
1 error
